# -*- coding: utf-8 -*-

2009-05-30  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb:  1.3.4.
	* doc/release_notes/rel_1_3_4.rdoc:  RubyGems 1.3.4 release notes.

2009-05-28  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/setup_command.rb:  Fix --format-executable
	  option name.
	* lib/rubygems/requirement.rb:  Fix typo in #parse.  Bug #26000 by
	  Mike Gunderloy.

2009-05-21  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Add 'dev' and svn revision for -1 RUBY_PATCHLEVEL
	  and RUBY_REVISION.

2009-05-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/defaults.rb:  Restore 1.9.1 path behavior.
	* lib/rubygems/specification.rb:  Fix undefined ivar warning.
	* lib/rubygems/indexer.rb:  Force loading of builder gem.
	* test/gemutilities.rb:  Remove gem_prelude code by hand to avoid 1.9
	  warnings.

2009-05-19  Luis Lavena  <luislavena@gmail.com>

	* test/test_gem_specification.rb: skip symlinks tests on Windows.
	* test/test_gem_commands_install_command.rb: skip chmod test on
	  Windows.

2009-05-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems*:  Fix 1.9 warnings about circular require.

2009-05-12  Daniel Berger  <djberg96@gmail.com>

	* lib/rubygems/remote_fetcher.rb:  Fixed the download method in the
	  remote_fetcher.rb file so that it handles local installs on MS
	  Windows when using explicit paths that aren't on the 'C:' drive.
	  Bug #25882 by Lars Christensen.
	* lib/rubygems/commands/update_command.rb:  Replaced deprecated
	  Gem::SourceIndex method 'search' with 'find_name' in the 'execute'
	  method.

2009-05-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/query_command.rb:  Support prerelease version
	  listing (--prerelease), list locally installed prereleases.
	* lib/rubygems/source_info_cache.rb:  Gem::SourceInfoCache is
	  officially unsupported, maintaining its tests is hard.
	* lib/rubygems/source_index.rb:  Add #all_gems, fix #remove_spec,