@@ -6,7 +6,7 @@
 
 require 'find'
 
-require 'rubygems/digest/md5'
+require 'digest'
 require 'rubygems/format'
 require 'rubygems/installer'
 
@@ -40,7 +40,7 @@ class Gem::Validator
     sum_data = gem_data.gsub(/MD5SUM = "([a-z0-9]+)"/,
                              "MD5SUM = \"#{"F" * 32}\"")
 
-    unless Gem::MD5.hexdigest(sum_data) == $1.to_s then
+    unless Digest::MD5.hexdigest(sum_data) == $1.to_s then
       raise Gem::VerificationError, 'invalid checksum for gem file'
     end
   end
@@ -139,8 +139,8 @@ class Gem::Validator
               next unless data # HACK `gem check -a mkrf`
 
               open File.join(gem_directory, entry['path']), Gem.binary_mode do |f|
-                unless Gem::MD5.hexdigest(f.read).to_s ==
-                    Gem::MD5.hexdigest(data).to_s then
+                unless Digest::MD5.hexdigest(f.read).to_s ==
+                    Digest::MD5.hexdigest(data).to_s then
                   errors[gem_name][entry['path']] = "Modified from original"
                 end
               end
